all Possible combination

--- a/main/configMachine.json
+++ b/main/configMachine.json
@@ -1,7 +1,7 @@
 {
-  "email": "01688888703",
-  "password" : "minhvoi03",
-  "linkToStrike" : "https://www.facebook.com/thaiminhpv/posts/1165430377151066",
-  "message" : null,
-  "delay": 600
+  "email": "truonggiaophai23@gmail.com",
+  "password": "12A7thptkimlien",
+  "linkToStrike": "https://www.facebook.com/nguyen.star.353/posts/968958963615983",
+  "message": "Lộc đam mê chơi rổ bơi lội nhảy múa",
+  "delay": 7
 }
